--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "elkjs": "^0.11.0",
     "graphology": "^0.26.0",
     "graphology-layout-forceatlas2": "^0.10.1",
+    "immer": "^11.1.3",
     "katex": "^0.16.27",
     "monaco-editor": "^0.55.1",
     "next": "^14.0.0",
